# empyrean-ai

./: .gitignore  .pre-commit-config.yaml  MakeFile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: decoding.yml  models.yml  routing.yml
docs/: model_matrix.md
eval/: harness.py
models/devstral-24b/: ModelFile
models/gemma3-27b-it-qat/: ModelFile
models/gpt-oss-120b/: Modelfile
models/nemotron-70b/: Modelfile
models/quen3-27b/: Modelfile
models/quen3-30b/: Modelfile
prompt_library/: analytical_v1.yml  bug_triage_v1.yml  code_assist_v1.yml  creative_v1.yml  design_rfc_v1.yml  extraction_jsononly_v1.yml  extraction_v1.yml
schemas/outputs/: analytical.schema.json  bug_triage.schema.json  code_assist.schema.json  creative.schema.json  design_rfc.schema.json  extraction.schema.json
scripts/: create_models.sh  lint.sh  pull_models.sh  start_server.sh
services/curator/: curatord.py
services/gateway/: infer.py
services/router/: routerd.py
src/empyrean_ai/: __init__.py  cli.py  config.py  evaluators.py  logging_utils.py  post_validators.py  server.py
src/empyrean_ai/curator/: __init__.py  engine.py  registry.py  router.py  templates.py
src/empyrean_ai/curator/inference/: __init__.py  ollama_client.py  retries.py
src/empyrean_ai/curator/inference/retrieval/: __init__.py  fs_chunks.py
tests/: test_router.py  test_smoke_ollama.py  test_templates.py
